# Backend-with-Rust

./: .gitignore  Cargo.toml
.github/: dependabot.yml
.github/workflows/: rust.yml
entity/: Cargo.toml
entity/src/: bikes.rs  cars.rs  lib.rs  prelude.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220903_213818_create_cars_table.rs  m20220903_213851_create_bikes_table.rs
src/: main.rs
src/controller/: cars.rs
src/database/: database.rs
