[package]
name = "backend-with-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
dotenv = "0.15.0"
env_logger = "0.9.0"
log = "0.4.17"
sea-orm = { version="0.9.2", features=["sqlx-mysql","runtime-actix-native-tls","macros","debug-print"] }
serde = "1.0.144"
serde_json = "1.0.85"
migration={ path = "migration" }
entity={ path = "entity" }
sea-orm-migration = { version="0.9.2", features=["runtime-actix-native-tls","sqlx-mysql"] }
