[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
sea-orm = { version="0.9.2", features=["sqlx-mysql","runtime-actix-native-tls","macros","debug-print"] }
async-std = { version = "^1", features = ["attributes", "tokio1"] }
entity={ path = "../entity" }

[dependencies.sea-orm-migration]
version = "^0.9.0"
features = [
  # Enable at least one `ASYNC_RUNTIME` and `DATABASE_DRIVER` feature if you want to run migration via CLI.
  # View the list of supported features at https://www.sea-ql.org/SeaORM/docs/install-and-config/database-and-async-runtime.
  # e
  # "runtime-tokio-rustls",  # `ASYNC_RUNTIME` featrure
  # "sqlx-postgres",         # `DATABASE_DRIVER` feature
  "runtime-actix-native-tls",
  "sqlx-mysql",
]
